# monkmode

./: README.md
transformer/: pyproject.toml
transformer/src/transformer/: __init__.py  attn_layers.py  exceptions.py  layers.py
transformer/tests/: test_batch_multi_head_attention.py  test_einsum.py  test_multi_head_attention.py  test_single_head_attention.py  test_single_query_attention.py  utils.py
