[project]
name = "transformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipython>=9.4.0",
    "numpy>=2.3.2",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "rich>=14.1.0",
    "ruff>=0.12.7",
    "torch>=2.7.1",
]

[project.scripts]
transformer = "transformer:main"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
